ocp repair, and some rewrite in Main.java for better test ReportManager